# e7020e-embedded-system-design

./: BrethalizerSTL.7z  Cargo.lock~03e959ec4bdf763f6cb86beb20a3a15d93a723f1  Cargo.toml  LICENSE  README.md  memory.x  openocd.cfg  openocd.gdb  stm32f4x.cfg  stm32l0.cfg  stm32l0_dual_bank.cfg
.cargo/: config
examples/: breathalyzer.rs  buzzer.rs  longfi_bindings.rs  oled.rs  oled2.rs  oled3.rs  radio.rs
pcbdesign/CMWX1ZZABZ-078_Symbol_and_Footprint/: CMWX1ZZABZ.kicad_mod  cmwx1zzabz-078.dcm  cmwx1zzabz-078.lib
pcbdesign/pcbdesign/: _autosave-pcbdesign.kicad_pcb  _autosave-pcbdesign.sch  fp-info-cache  fp-lib-table  pcbdesign-cache.lib  pcbdesign-rescue.lib  pcbdesign.csv  pcbdesign.kicad_pcb  pcbdesign.kicad_pcb-bak  pcbdesign.lib  pcbdesign.net  pcbdesign.pro  pcbdesign.sch  pcbdesign.sch-bak  pcbdesign1.net  sym-lib-table
pcbdesign/pcbdesign/ProjectPCB.pretty/: BEER.kicad_mod  BEER_SMALL.kicad_mod  CMWX1ZZABZ.kicad_mod  CMWX1ZZABZ_longer_pads.kicad_mod  PKM13EPYH4000_piezo.kicad_mod  helpmeimdyinginside.kicad_mod
pcbdesign/pcbdesign/gerber/: group.txt  pcbdesign-B_Cu.gbr  pcbdesign-B_Mask.gbr  pcbdesign-B_SilkS.gbr  pcbdesign-Edge_Cuts.gbr  pcbdesign-F_Cu.gbr  pcbdesign-F_Mask.gbr
pcbdesign/pcbdesign/pcbdesign.pretty/: CMWX1ZZABZ_longer_pads.kicad_mod  PKM13EPYH4000_piezo.kicad_mod
src/: _main.rs  breathalyzer.rs  buzzer.rs  longfi_bindings.rs  main.rs  oled.rs
