[package]
name = "e7030e-embedded-system-design"
categories = ["embedded", "no-std"]
version = "0.1.0"
authors = ["Viktor From <viktor.from91@gmail.com>"]
edition = "2018"
 
[dependencies]
panic-halt              = "0.2"
panic-semihosting       = "0.5"
cortex-m-semihosting    = "0.3.5"
aligned                 = "0.3.2"
ufmt                    = "0.1.0"
panic-itm               = "0.4.1"
nb                      = "0.1.2"

[dependencies.cortex-m]
version         = "0.6.2"
# features        = ["inline-asm"] # <- currently requires nightly compiler

[dependencies.cortex-m-rt]
version         = "0.6.12"

[dependencies.stm32f4]
version         = "0.9.0"
features        = ["stm32f401", "rt"]
optional        = true

[dependencies.stm32f4xx-hal]
version         = "0.6.0"
features        = ["stm32f401", "rt"]
optional        = true

[dependencies.cortex-m-rtfm]
version         = "0.5.1"
optional        = true

[features]
rtfm            = ["cortex-m-rtfm", "stm32f4xx-hal"]

# this lets you use `cargo fix`!
[[bin]]
name            = "e7030e-embedded-system-design"
test            = false
bench           = false

[profile.dev]
opt-level       = 1
codegen-units   = 16
debug           = true
lto             = false

[profile.release]
#opt-level       = "s"   # optimize for size
codegen-units   = 1     # better optimizations
debug           = true  # symbols are nice and they don't increase the size on Flash
lto             = true  # better optimizations
