[package]
name = "e7020e-embedded-system-design"
categories = ["embedded", "no-std"]
version = "0.1.0"
authors = ["Viktor From <viktor.from91@gmail.com>"]
edition = "2018"
 
[dependencies]
panic-semihosting       = "0.5.3"
cortex-m-semihosting    = "0.3.5"
aligned                 = "0.3.2"
ufmt                    = "0.1.0"
nb                      = "0.1.2"
embedded-hal            = "0.2.3"
crc16                   = "0.4.0"
heapless                = "0.5.1"
postcard                = "0.4.2"

[dependencies.longfi-device]
#git = "https://git.grepit.se/grepit/lora-rs.git" 
git = "https://git.grepit.se/viktor.sonesten/lora-rs.git"
branch = "ltu-es"
optional = true

[dependencies.communicator]
path = "../communicator"
#git = "https://git.grepit.se/grepit/communicator.git"
optional = true

[dependencies.ssd1306]
version = "=0.3.0-alpha.4"
features = [ "graphics" ]

[dependencies.embedded-graphics]
version = "=0.6.0-alpha.3"

# Used to load BMP images in various examples
[dev-dependencies.tinybmp]
version = "0.2.1"

[dependencies.cortex-m]
version         = "0.6.2"
# features        = ["inline-asm"] # <- currently requires nightly compiler

[dependencies.cortex-m-rt]
version         = "0.6.12"

[dependencies.cortex-m-rtfm]
version         = "0.5.1"
#version         = "0.4.3"

[dependencies.stm32l0xx-hal]
version         = "0.5.0"
features        = ["stm32l0x2", "rt"]

[dependencies.cobs]
version         = "0.1.4"
default-features = false 

[features]
radio = ["longfi-device", "communicator"]

# this lets you use `cargo fix`!
[[bin]]
name            = "e7020e-embedded-system-design"
test            = false
bench           = false
required-features = ["radio"]

[[example]]
name            = "breathalyzer"

[[example]]
name            = "buzzer"

[[example]]
name            = "oled"

[[example]]
name            = "oled2"

[profile.dev]
opt-level       = 1
#codegen-units   = 16
#debug           = true
#lto             = false

[profile.release]
#opt-level       = "s"   # optimize for size
codegen-units   = 1     # better optimizations
debug           = true  # symbols are nice and they don't increase the size on Flash
lto             = true  # better optimizations
